--- a/cpu-api/Makefile
+++ b/cpu-api/Makefile
@@ -1,8 +1,8 @@
 
-all: p1 p2 p3 p4
+all: p1 p2 p3 p4 hw1 hw2 hw3 hw4 hw5 hw6 hw7 hw8
 
 clean:
-	rm -f p1 p2 p3 p4
+	rm -f p1 p2 p3 p4 hw1 hw2 hw3 hw4 hw5 hw6 hw7 hw8 *.output
 
 p1: p1.c
 	gcc -o p1 p1.c -Wall
@@ -16,3 +16,26 @@ p3: p3.c
 p4: p4.c
 	gcc -o p4 p4.c -Wall
 
+hw1: hw1.c
+	gcc -o hw1 hw1.c -Wall
+
+hw2: hw2.c
+	gcc -o hw2 hw2.c -Wall
+
+hw3: hw3.c
+	gcc -o hw3 hw3.c -Wall
+
+hw4: hw4.c
+	gcc -o hw4 hw4.c -Wall
+
+hw5: hw5.c
+	gcc -o hw5 hw5.c -Wall
+
+hw6: hw6.c
+	gcc -o hw6 hw6.c -Wall
+
+hw7: hw7.c
+	gcc -o hw7 hw7.c -Wall
+
+hw8: hw8.c
+	gcc -o hw8 hw8.c -Wall
